@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/09/25
+	* Item group reading will now complain when a line doesn't has enough
+	  fields. [Skotlex]
 	* Fixed #baselevelup adding instead of substracting status points when used
 	  with negative levels. Also made it reset your stats if there wasn't enough
 	  to substract from. [Skotlex]
